/*
 * Copyright (C) 2017-2019 Dremio Corporation
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";
package exec.search;

option java_package = "com.dremio.exec.proto";
option java_outer_classname = "SearchProtos";
option optimize_for = SPEED;
option java_generate_equals_and_hash = true;

// catalog search query message
message SearchQuery {
  // equals clause
  message Equals {
    string field = 1;
    oneof value {
      string stringValue = 2;
      int32 intValue = 3;
    }
  }

  // like clause
  message Like {
    string field = 1;
    string pattern = 2; // according to SQL spec
    string escape = 3; // In general, empty implies no escaping. For INFORMATION_SCHEMA queries, we default to backslash (\) as the escape character even if this is empty.
    bool caseInsensitive = 4;
  }

  // and clause
  message And {
    repeated SearchQuery clauses = 1;
  }

  // or clause
  message Or {
    repeated SearchQuery clauses = 1;
  }

  message GreaterThan {
    string field = 1;
    int64 value = 2;
  }

  message GreaterThanOrEqual {
    string field = 1;
    int64 value = 2;
  }

  message LessThan {
    string field = 1;
    int64 value = 2;
  }

  message LessThanOrEqual {
    string field = 1;
    int64 value = 2;
  }

  // a catalog search query has one of the clauses
  oneof query {
    Equals equals = 1;
    And and = 2;
    Or or = 3;
    Like like = 4;
    GreaterThan greater_than = 5;
    GreaterThanOrEqual greater_than_or_equal = 6;
    LessThan less_than = 7;
    LessThanOrEqual less_than_or_equal = 8;
    // TODO(DX-9909): add support for NOT and != operators
  }
}
